# tenk_agent_submission

./: .env.example  Makefile  README.md  cli.py  docker-compose.yml  langgraph.json  pyproject.toml  test_cli_questions.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
docker/initdb/: 01-enable-pgvector.sql
docs/: architecture.md  todo.md
src/index/: __init__.py  constants.py  types.py
src/index/chunker/: chunk_accumulator.py  chunker.py  types.py
src/index/parser/: __init__.py  constants.py  parser.py  types.py
src/index_graph/: configuration.py  graph.py
src/react_agent/: configuration.py  graph.py
src/react_agent/nodes/: __init__.py  _tools.py  generate_response.py  validate_citations.py
src/react_agent/prompts/: __init__.py  agent_system.j2  tenk_structure.j2
src/react_agent/tools/: __init__.py  document_qa.py  get_agent_available_data.py  search.py
src/shared/: configuration.py  logger.py  retrieval.py
